--- a/webapp/src/pages/app/Auth.css
+++ b/webapp/src/pages/app/Auth.css
@@ -84,6 +84,7 @@
             color: var(--color-error);
             font-size: 0.9375rem;
             line-height: 1.4;
+            text-align: center;
         }
 
         .btn-full {
